finished JVM Code blocks implementation